# Karkinos

./: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
api/: .gitignore  pyproject.toml
api/app/: dependencies.py  main.py
api/app/routers/: cancers.py  documents.py  search.py  sources.py
api/app/schemas/: search.py
api/app/services/: embedding.py  search.py
api/app/tests/: test_search.py
api/tests/: test_health.py
db/: docker-compose.yml  schema.sql
ingestion/: ingest.py  requirements.txt  text.py  vector.py
src/: App.tsx
src/data/: knowledgeSources.ts
src/hooks/: useKnowledgeBase.ts
src/styles/: app.css  index.css
web/: .gitignore  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  main.py  page.tsx
web/app/intelligence/: page.tsx
web/app/intelligence/asco/: page.tsx
web/app/intelligence/esmo/: page.tsx
web/app/intelligence/nccn/: page.tsx
web/app/intelligence/pubmed-central/: page.tsx
web/app/routes/: search.py
web/app/templates/intelligence/: search.html
web/components/: Card.tsx
web/intelligence/upload/: index.html
web/tests/: test_search_ui.py
