[project]
name = "karkinos"
version = "0.1.0"
description = "Karkinos intelligence platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pgvector>=0.2",
    "pydantic>=1.10",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.4.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
