[tool.poetry]
name = "karkinos-api"
version = "0.1.0"
description = "FastAPI service for Karkinos oncology intelligence"
authors = ["Karkinos Team <engineering@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
python-multipart = "0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
